--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.12.0",
     "react-router-dom": "^7.13.0",
+    "react-toastify": "^11.0.5",
     "zod": "^4.3.6"
   },
   "devDependencies": {
